force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Water_Occ__c.field-meta.xml
<CustomField>
    <fullName>Water_Occ__c</fullName>
    <formula>if( HP_Parameter__r.Land_Related__c == true, (HP_Parameter__r.GPD_Gallons_Person__c ), (HP_Parameter__r.GPD_Gallons_Person__c/8) *  Occuant_USF__c *  Occ_H_SF_Yr__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>