force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Water_Portable__c.field-meta.xml
<CustomField>
    <fullName>Water_Portable__c</fullName>
    <formula>Energy_Water__c * (1- Value(Text(TCO_Performance_Input__r.Is_Non_Portable_Water_Available__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water-Potable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>