force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Water_Portable_WF__c.field-meta.xml
<CustomField>
    <fullName>Water_Portable_WF__c</fullName>
    <label>Potable Water Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>