force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Water_Rec__c.field-meta.xml
<CustomField>
    <fullName>Water_Rec__c</fullName>
    <formula>Energy_Water__c *  Value(Text(TCO_Performance_Input__r.Is_Non_Portable_Water_Available__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Water-Rec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>